cluster/services/invidious/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: invidious
  namespace: services
spec:
  selector:
    app: redis
  type: ClusterIP
  ports:
    - name: web
      port: 3000
      targetPort: 3000
