cluster/services/invidious/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/modsecurity-transaction-id: $request_id
    nginx.ingress.kubernetes.io/modsecurity-snippet: |
      SecRuleEngine DetectionOnly
  generation: 1
  labels:
    app.kubernetes.io/instance: invidious
    app.kubernetes.io/name: invidious
    app.kubernetes.io/version: latest
  name: invidious
  namespace: services
spec:
  ingressClassName: nginx
  rules:
    - host: yt.bth.wtf
      http:
        paths:
          - backend:
              service:
                name: invidious-server
                port:
                  number: 3000
            path: /
            pathType: Prefix
